objects/ssot__VehicleTripDriverBehavior__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetOperationStyle__c</fullName>
        <label>Asset Operation Style</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetParticipantId__c</fullName>
        <label>Asset Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrakingStyle__c</fullName>
        <label>Braking Style</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollisionCount__c</fullName>
        <label>Collision Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasGeofenceCrossed__c</fullName>
        <label>Geofence Crossed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Vehicle Trip Driver Behavior Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsIdle__c</fullName>
        <label>Idle</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSmoking__c</fullName>
        <label>Smoking</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsUsingPhone__c</fullName>
        <label>Using Phone</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumEngineRPMNumber__c</fullName>
        <label>Maximum Engine RPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumSpeedNumber__c</fullName>
        <label>Maximum Speed</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OperationShiftPartCount__c</fullName>
        <label>Operation Shift Part Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OperatorId__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpeedUomId__c</fullName>
        <label>Speed UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TelematicsProviderId__c</fullName>
        <label>Telematics Provider</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleTripId__c</fullName>
        <label>Vehicle Trip</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761233994_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTripDriverBehavior_AssetParti_rel</label>
        <referenceTo>ssot__AssetParticipant__dlm</referenceTo>
        <relationshipLabel>VehicleTripDriverBehavior_AssetParti_rel</relationshipLabel>
        <relationshipName>rel_1697761233994_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761234059_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTripDriverBehavior_SpeedUomId_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>VehicleTripDriverBehavior_SpeedUomId_rel</relationshipLabel>
        <relationshipName>rel_1697761234059_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761234118_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTripDriverBehavior_Telematics_rel</label>
        <referenceTo>ssot__TelematicsProvider__dlm</referenceTo>
        <relationshipLabel>VehicleTripDriverBehavior_Telematics_rel</relationshipLabel>
        <relationshipName>rel_1697761234118_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>